--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,3 @@
-// @tailwind base;
-// @tailwind components;
-// @tailwind utilities;
 @import 'variables';
 @import 'helpers';
 
@@ -38,6 +35,10 @@ body {
   li {
     margin-right: 40px;
     border: 0;
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 
   .ui-tabs,
@@ -81,6 +82,7 @@ body {
 }
 
 // jQuery UI end
+
 .slider-1 {
   &__img {
     margin-bottom: 30px;
@@ -104,4 +106,9 @@ body {
       }
     }
   }
+}
+
+.footer,
+.copyright {
+  background-color: $black;
 }
